changed styles to make resolve overflow

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -52,7 +52,7 @@ html.full-height {
 }
 
 body {
-   padding: 10px;
+  //  padding: 10px;
   -webkit-font-smoothing: antialiased;
   color: $black;
   // font-family: 'Manrope';
@@ -72,12 +72,16 @@ body {
   
 }
 .page-contains{
+  // box-sizing: border-box;
+  margin: 0 auto;
   // padding: 20px;
-  // width: min-content;
+  max-width: 1366px;
+  overflow: inherit;
     // height: 1200px;
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
-  gap:40px;
+  // gap:40px;
   
   
 }
