--- a/src/assets/sass/components/_card.scss
+++ b/src/assets/sass/components/_card.scss
@@ -1,19 +1,23 @@
 .card {
     position: relative;
     flex-direction: column;
-     width:max-content;
+     
     padding: 20px; 
     // background: getColor("white.base");
     // border: 1px solid getColor("white.light");
     // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
      border-radius: 17px;
+     
+     @include m(image){
+        padding:0px;
+     }
     @include e(icon){
       margin-right: 24px;;
     }
     @include m(bg-white){
         
         background: white;
-        width:280px;
+        width:260px;
     }
     @include m(right){
         justify-content: space-between;
@@ -96,7 +100,7 @@
     }
 
     @include m(gap){
-        gap:140px;
+        gap:60px;
     }
     @include m(bg-gray){
         margin-top:10px ;
@@ -107,7 +111,9 @@
             font-weight: 500;
             font-size: 14px;
             line-height: 19px;
-            text-align: right
+            text-align: right;
+            margin-left: 10px;
+
     }
     @include e(title){
         display: flex;
