--- a/src/assets/sass/components/_leftContainer.scss
+++ b/src/assets/sass/components/_leftContainer.scss
@@ -1,9 +1,13 @@
 .left-container{
     display: flex;
     flex-direction: column;
-    padding:30px;
+    padding:20px;
     gap:50px;
+    // width:260px;
     height: 100%;
+    position: sticky;
+    // border-right: 1px solid #000000 ;
+    
 }
 .profile{
     display: flex;
@@ -25,10 +29,11 @@
 
 .side-bar{
     display: flex;
+    // width:200px;
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-        padding: 0px 0px 30px;
+        // padding: 0px 0px 30px;
         gap: 50px;
         
 }
