--- a/src/assets/sass/components/_rightContainer.scss
+++ b/src/assets/sass/components/_rightContainer.scss
@@ -1,6 +1,9 @@
 .right-container{
     display: flex;
     flex-direction: column;
-    padding: 0px 30px;
+    
+    
+    padding: 0px 10px;
+
     background:radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(252, 244, 248, 1) 100%);;
 }
