--- a/src/assets/sass/variables/_fonts.scss
+++ b/src/assets/sass/variables/_fonts.scss
@@ -6,7 +6,7 @@ $base__font-size: 1rem !default;
 // Custom font url
 // $font-url: "https://rsms.me/inter/inter.css" !default;
 $font-url: "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap" !default;
-$font-custom: "Poppins" !default;
+$font-custom: "Roboto" !default;
 
 // Font Declaration
 $font-sans: $font-custom, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
